fixed banner image not showing and positioned navbar

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,8 +9,13 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    position: sticky;
+    padding: 10px 20px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    border-radius: 0 0 5px 5px;
 }
 
 .navbar-brand {
@@ -46,30 +51,28 @@ body{
 }
 
 .banner img {
-    position: fixed;
     object-fit: cover;
     width: 100%;
-    height: 30%;
-    opacity: 0;
-    transition: opacity 4s ease-in-out;
-    animation: fade 24s infinite;
-}
-
-.banner img:nth-child(1) {
-    opacity: 1;
-    animation-delay: 0s;
-}
-
-.banner img:nth-child(2) {
-    animation-delay: 6s;
-}
-
-.banner img:nth-child(3) {
-    animation-delay: 12s;
+    height: 60%;
+    transition: opacity 2s ease-in-out;
+    animation: fade 8s infinite;
+    position: absolute;
 }
 
 .banner img:nth-child(4) {
-    animation-delay: 18s;
+    animation-delay: 0s;
+}
+
+.banner img:nth-child(3) {
+    animation-delay: 2s;
+}
+
+.banner img:nth-child(2) {
+    animation-delay: 4s;
+}
+
+.banner img:nth-child(1) {
+    animation-delay: 6s;
 }
 
 @keyframes fade {
